@@ -1,4 +1,8 @@
-﻿2012-08-18 Nicole Cordes <cordes@cps-it.de>
+﻿2012-09-13 Nicole Cordes <cordes@cps-it.de>
+
+	* Fixed piVars initialisation when going back from error page
+
+2012-08-18 Nicole Cordes <cordes@cps-it.de>
 
 	* Removed support for TYPO3 versions lower than TYPO3 4.5
 	* Fixed deprecated function to support greater TYPO3 6.0
